Fix dati-wrapper overflow

--- a/css/style.css
+++ b/css/style.css
@@ -24,15 +24,18 @@ td.numero-field {
 }
 
 .dati-wrapper {
-  height: auto;
-  max-height: 90%;
   overflow-y: auto;
+  height: 65vh;
+  /* height: auto; */
+  max-height: 90%;
+  /*overflow-y: auto; */
 }
 
 .delete-row:before {
   font-size: 1.5em;
   font-family: FontAwesome;
   content: "\f014";
+  cursor: pointer;
 }
 
 #aggiungi {
@@ -138,16 +141,16 @@ div.row-result {
   display: flex;
   margin: 1em auto;
   border-radius: 50%;
-  width: 3em;
-  height: 3em;
-  font-size: 1em;
-  padding: 10px;
-  align-items: center;
+  width: 30px;
+  height: 28px;
+  font-size: 7px;
+  padding: 6px;
   justify-content: center;
 }
 
 .aggiungi label {
   font-size: 2em;
+  cursor: pointer;
 }
 
 p.descrizione {
